2008-05-24  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/AbstractScanlineTextureMapper.h

    Small optimisation.
    Replace constant trigonometric expressions with the actual values.

2008-05-24  Torsten Rahn  <rahn@kde.org> 

    * src/lib/EquirectScanlineTextureMapper.cpp:

    - Add bilinear filtering here as well as pointed out by jm

2008-05-24  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/ViewParams.h:
    * src/lib/ViewportParams.h:

    Fix d-pointerfied classes by disallowing copies.
    Thanks to Pino Toscano for pointing this out.

2008-05-24  Torsten Rahn  <rahn@kde.org> 

    * data/maps/earth/openstreetmap/0/0/0.png:

    - Given that the previous OSM tile shipped with Marble was
      licensed under the Creative Commons Attribution-ShareAlike 2.0 license
      and given that Debian doesn't approve this license as a 
      "free" license we replace the very low resolution tile by a simple blue
      square for now. Later on we'll add a public domain map in the style
      of the original OSM tile.

2008-05-24  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/MeasureTool.cpp:
    * src/lib/MarbleWidget.cpp:
    * src/lib/Projections/MercatorProjectionHelper.cpp:
    * src/lib/PlaceMarkPainter.cpp:
    * src/lib/MarbleMap.cpp:
    * src/lib/VectorMap.cpp:
    * src/lib/ViewportParams.h:
    * src/lib/ViewportParams.cpp:
    * src/plugins/marble/overviewmap/MarbleOverviewMap.cpp:
    * src/plugins/marble/compass/CompassFloatItem.cpp:

    - Fix includes.
    - Add my copyright notice to ViewportParams.

2008-05-24  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/ViewportParams.h:
    * src/lib/ViewportParams.cpp:

    D-pointerfy class ViewportParams.

2008-05-23  Torsten Rahn  <rahn@kde.org> 

    * TileLoader.cpp:

    This fixes the most obvious issues with the tile downloading.
    The only real other issue left is speed: We need to 
    improve the HttpDownloadManager to have better algorithms