@@ -1,5 +1,13 @@
 2008-05-24  Jens-Michael Hoffmann  <jensmh@gmx.de>
 
+    * src/lib/gps/TrackPoint.h:
+    * src/lib/AbstractLayer/AbstractLayerData.h:
+    * src/lib/AbstractLayer/AbstractLayerContainer.h:
+
+    Declare constructors explicit.
+
+2008-05-24  Jens-Michael Hoffmann  <jensmh@gmx.de>
+
     * src/lib/AbstractScanlineTextureMapper.h
 
     Small optimisation.
